--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "encore gen client {{ENCORE_APP_ID}} --output=./app/lib/client.ts --env=local"
+    "gen": "encore gen client cusmato-5et2 --output=./app/lib/client.ts --env=local"
   },
   "dependencies": {
     "react": "^18",
